# pycc

./: pyproject.toml
c_examples/: example  example.s
src/pycc/: compiler.py
tests/: test_compiler.py
tests/basic_tests/: a.out  example.i  test.i  test_file_contents.py
