[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "A brief description of your project."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "pycc", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
# Add your runtime dependencies here:
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
# Add your development dependencies here:
pytest = "^6.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
